# aenrisite

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  eslint.config.js  nginx.conf  package.json  svelte.config.js  vite.config.ts  wsedg.rs
pages/: 003-aenrisite.md  idaidaidaii.md  radqueer.md  test.md
pkg/awrf/: Cargo.toml
pkg/awrf-macro/: Cargo.toml
pkg/awrf-macro/doc/: syntax.md
pkg/awrf-macro/src/: lib.rs  tests.rs
pkg/awrf-macro/src/entities/: mod.rs  statement.rs
pkg/awrf-macro/src/parse/: mod.rs  stmt_for.rs  stmt_if.rs  stmt_use.rs
pkg/awrf/src/: argument.rs  components.rs  compose_macro.rs  lib.rs  tests.rs
pkg/awrf/src/components/: fragment.rs  frame.rs  image.rs  text.rs
src/: app.css  frappe.css  hooks.server.ts  main.rs  tests.rs
src/html/: mod.rs
src/html/components/: mod.rs  nojs_tab.rs
src/html/components/projects/: mod.rs
src/html/frames/: base_page_frame.rs  homepage_frame.rs  mod.rs
src/html/layouts/: main_layout.rs  mod.rs  root.rs  tabbed_layout.rs
src/html/styles/: base.css  home.css  main_layout.css  mod.rs
src/lib/: renderCache.ts  util.ts
src/lib/blog/: cache.ts  index.ts
src/lib/components/: Header.svelte
src/lib/components/home/: AboutMeCard.svelte  index.ts  (+3 more)
src/lib/layouts/: BlogLayout.svelte
src/lib/mdsvex-components/: h1.svelte  index.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  _index.rs  index.rs  mod.rs
src/routes/blog/: +page.server.ts  +page.svelte
src/web/: mod.rs  routing.rs
src/web/framework/: component.rs  frame_c.rs  mod.rs
(+8 files in other folders)
