[package]
name = "aenrisite"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "packages/marker",
    "packages/marker_macro"
    ]


[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
cached = "0.53.1"
const-random = "0.1.18"
html-node = "0.5.0"
maud = { version = "0.26.0", features = ["actix-web"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
marker = { path = "packages/marker" }
marker_macro = { path = "packages/marker_macro" }
lazy_static = "1.5.0"
