[package]
name = "aenrisite"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    ".",
    "pkg/awrf"
, "pkg/awrf-macro"]

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
cached = "0.53.1"
const-random = "0.1.18"
html-node = "0.5.0"
maud = { version = "0.26.0", features = ["actix-web"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
lazy_static = "1.5.0"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
log = "0.4.22"
env_logger = "0.11.5"
